--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -1,24 +1,32 @@
 {% extends 'persons/base_navbar.html' %}
 {% load leaflet_tags %}
+{% load bootstrap4 %}
+{% load static %}
 
 {% block content %}
     <div class="row my-3">
         {% if event %}
             <div class="col-9 text-left m-auto">
                 <div class="row">
-                <div class="col-12 d-flex text-center align-items-center justify-content-center">
-                    <h1 class="mr-3">{{ event.title|title }}</h1>
-                     {% if is_favorite %}
-                        <a href="{% url 'unfavorite-event' favorite.pk %}"><i
-                                class="fas fa-heart text-danger fa-2x"></i></a>
-                    {% else %}
-                        <a href="{% url 'favorite-event' event.pk %}"><i class="far fa-heart text-danger fa-2x"></i></a>
-                    {% endif %}
-                </div>
-                <div class="col-12 text-center">
-                    <p>Par {% if event.person.pk is not person.pk %} <a class="show-user" href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a> {% else %}
-                    {{ event.person.pseudo }} {% endif %} le {{ event.event_date|date:'d/m/y à h:m' }}</p>
-                </div>
+                    <div class="col-12 d-flex text-center align-items-center justify-content-center">
+                        <h1 class="mr-3">{{ event.title|title }}</h1>
+                        {% if is_favorite %}
+                            <a href="{% url 'unfavorite-event' favorite.pk %}"><i
+                                    class="fas fa-heart text-danger fa-2x"></i></a>
+                        {% else %}
+                            {% if person.person_type != "professionnel" %}
+                                {% if person != event.person %}
+                                    <a href="{% url 'favorite-event' event.pk %}"><i
+                                            class="far fa-heart text-danger fa-2x"></i></a>
+                                {% endif %}
+                            {% endif %}
+                        {% endif %}
+                    </div>
+                    <div class="col-12 text-center">
+                        <p>Par {% if event.person.pk is not person.pk %}<a class="show-user"
+                                                                           href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a> {% else %}
+                            {{ event.person.pseudo }} {% endif %} le {{ event.event_date|date:'d/m/y à h:m' }}</p>
+                    </div>
 
                 </div>
                 <hr>
@@ -34,7 +42,7 @@
                     {% leaflet_map "map" callback="window.map_init_basic" %}
                 </div>
                 <div class="text-center mt-3">
-                    {% if user.pk and person.person_type != "professionnel" %}
+                    {% if person.person_type != "professionnel" %}
                         {% if person != event.person %}
                             {% if is_registered %}
                                 <a href="{% url 'desinscription-event' inscrit.pk %}" class="btn btn-primary">se
@@ -42,9 +50,55 @@
                             {% else %}
                                 <a href="{% url 'inscription-event' event.pk %}" class="btn btn-primary">s'inscrire</a>
                             {% endif %}
-
                         {% endif %}
                     {% endif %}
+                </div>
+                <hr>
+                <div id="carouselcontrol" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner slide carousel-multi-item">
+                        {% for event in events_caroussel %}
+                            {% if forloop.counter0|divisibleby:2 %}
+                                <div class="carousel-item{% if forloop.first %} active{% endif %}">
+                                <div class="row">
+                            {% endif %}
+
+                        <div class="col-md-6 clearfix d-none d-md-block">
+                            <div class="card mt-3">
+                                {% with 'assets/category/'|add:event.category|add:'.jpeg' as category %}
+                                    <img src="{% static category %}" class="card-img category-img">
+                                {% endwith %}
+                                <div class="card-body">
+                                    <div class="d-flex">
+                                        <p class="text-left"><a href="{% url 'description-event' event.pk %}">
+                                            <h4
+                                                    class="mt-3">{{ event.title|title }}</h4></a></p>
+                                    </div>
+                                    <p class="card-text"><b>Catégorie :</b> {{ event.category|title }}</p>
+                                    <p class="card-text"><b>Lieu
+                                        :</b> {{ event.address }}, {{ event.zip_code }}, {{ event.city }} </p>
+                                    <p class="card-text"><b>Date :</b> {{ event.event_date|date:'d/m/y à h:m' }}
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        {% if not forloop.counter0|divisibleby:2 or forloop.last %}
+                            </div>
+                            </div>
+                        {% endif %}
+                        {% endfor %}
+                        {% if events_caroussel.count > 1 %}
+                            <a class="carousel-control-prev" href="#carouselcontrol" role="button"
+                               data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselcontrol" role="button"
+                               data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         {% endif %}
