--- a/events/templates/persons/events/my_favorite_events.html
+++ b/events/templates/persons/events/my_favorite_events.html
@@ -16,7 +16,7 @@
                         </li>
                         {% if person.person_type != "professionnel" %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'profil-registered_events' %}">Mes favorites</a>
+                                <a class="nav-link" href="{% url 'profil-registered_events' %}">Mes Inscriptions</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'profil-finished-events' %}">Mes favorites
@@ -64,23 +64,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            {##}
-                            {#                        <div class="row">#}
-                            {#                            <div class="col">#}
-                            {#                                <a href="{% url 'description-event' favorite.event.pk %}"><h3 class="mt-3">{{ favorite.event.title }}</h3></a>#}
-                            {#                                <span>({{ favorite.event.category }})</span>#}
-                            {#                                <p>Par {% if favorite.event.person.pk is not person.pk %}#}
-                            {#                                    <a class="show-user" href="{% url 'profil-show-user' favorite.event.person.pk %}">{{ favorite.event.person.pseudo }}</a> {% else %}#}
-                            {#                                    {{ favorite.event.person.pseudo }} {% endif %}#}
-                            {#                                    le {{ favorite.event.event_date|date:'d/m/y à h:m' }}#}
-                            {#                                </p>#}
-                            {#                                <p>{{ favorite.event.description }}</p>#}
-                            {#                                <p>{{ favorite.event.address }}, {{ favorite.event.zip_code }}, {{ favorite.event.city }}</p>#}
-                            {#                                <a href="{% url 'unfavorite-event' favorite.pk %}"><i#}
-                            {#                                        class="fas fa-heart text-danger fa-2x"></i></a>#}
-                            {#                            </div>#}
-                            {#                        </div>#}
                         {% empty %}
                             <p>Il n'y a pas d'évenements favoris pour le moment</p>
                         {% endfor %}
