--- a/events/templates/persons/events/my_finished_events.html
+++ b/events/templates/persons/events/my_finished_events.html
@@ -46,7 +46,7 @@
                                                 <div class="stacked-icons">
                                                     <span class="fa-stack">
                                                     <i class="fas fa-star fa-stack-2x"></i>
-                                                    <strong class="fa-stack-1x fa-stack-text fa-inverse text-dark">5</strong>
+                                                    <strong class="fa-stack-1x fa-stack-text fa-inverse text-dark">{{ inscription.getKarma }}</strong>
                                                   </span>
                                                 </div>
                                             {% else %}
