--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -44,6 +44,11 @@
                                        href="{% url 'events' %}?category_filter={{ value }}&order_filter=
                                                {{ order_filter }}{% if query is not None %}&q=
 
+
+
+
+
+
                                            {{ query }}{% elif lieu_filter is not None %}&lieu={{ lieu_filter }}{% endif %}">{{ label|title }}
                                         ({{ count }})</a>
                                 {% endif %}
@@ -66,43 +71,58 @@
                 </div>
                 <div class="col-md-9 p-0">
                     {% if filtered_events %}
-                        {% for event in filtered_events %}
-                            <div class="card mt-3">
-                                <div class="d-flex justify-content-between align-items-center card-header">
-                                    <p class="m-0 h4">{{ event.title|title }}</p>
-                                    {% if event.person.person_type == "particulier" %}
-                                        <i class="fas fa-user"></i>
-                                    {% else %}
-                                        <i class="fas fa-user-tie"></i>
-                                    {% endif %}
-                                </div>
-                                <div class="card-body">
-                                    <div class="d-flex">
-                                        <h5 class="card-title">Par {% if event.person.pk is not person.pk %}
-                                            <a class="show-user"
-                                               href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a>
-                                            {% else %}{{ event.person.pseudo }} {% endif %}
-                                            {% if event.person.note is not None %}
-                                                {% if event.person.note >= 7 %}
-                                                    <img height="25" width="25" src="{% static 'assets/good.svg' %}">
-                                                {% elif event.person.note < 7 and event.person.note >= 4 %}
-                                                    <img height="25" width="25" src="{% static 'assets/average.svg' %}">
-                                                {% else %}
-                                                    <img height="25" width="25" src="{% static 'assets/bad.svg' %}">
-                                                {% endif %}
+                        <div class="row d-flex">
+                            {% for event in filtered_events %}
+                                <div class="col-md-12">
+                                    <div class="card mt-3">
+                                        <div class="d-flex justify-content-between align-items-center card-header">
+                                            <p class="m-0 h4">{{ event.title|title }}</p>
+                                            {% if event.person.person_type == "particulier" %}
+                                                <i class="fas fa-user"></i>
+                                            {% else %}
+                                                <i class="fas fa-user-tie"></i>
                                             {% endif %}
-                                        </h5>
-
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-md-5">
+                                                    {% with 'assets/category/'|add:event.category|add:'.jpeg' as category %}
+                                                        <img src="{% static category %}" class="card-img">
+                                                    {% endwith %}
+                                                </div>
+                                                <div class="col-md-7">
+                                                    <h5 class="card-title">Par {% if event.person.pk is not person.pk %}
+                                                        <a class="show-user"
+                                                           href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a>
+                                                        {% else %}{{ event.person.pseudo }} {% endif %}
+                                                        {% if event.person.note is not None %}
+                                                            {% if event.person.note >= 7 %}
+                                                                <img height="25" width="25"
+                                                                     src="{% static 'assets/good.svg' %}">
+                                                            {% elif event.person.note < 7 and event.person.note >= 4 %}
+                                                                <img height="25" width="25"
+                                                                     src="{% static 'assets/average.svg' %}">
+                                                            {% else %}
+                                                                <img height="25" width="25"
+                                                                     src="{% static 'assets/bad.svg' %}">
+                                                            {% endif %}
+                                                        {% endif %}
+                                                    </h5>
+                                                    <p class="card-text"><b>Catégorie :</b> {{ event.category|title }}
+                                                    </p>
+                                                    <p class="card-text"><b>Lieu :</b> {{ event.city|title }}
+                                                        le {{ event.event_date|date:'d/m/y à h:m' }}</p>
+                                                    <a href="{% url 'description-event' event.pk %}"
+                                                       class="btn btn-primary">Plus
+                                                        de
+                                                        détails</a>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <p class="card-text"><b>Catégorie :</b> {{ event.category|title }}</p>
-                                    <p class="card-text"><b>Lieu :</b> {{ event.city|title }}
-                                        le {{ event.event_date|date:'d/m/y à h:m' }}</p>
-                                    <a href="{% url 'description-event' event.pk %}" class="btn btn-primary">Plus de
-                                        détails</a>
-
                                 </div>
-                            </div>
-                        {% endfor %}
+                            {% endfor %}
+                        </div>
                         </div>
                     {% else %}
                         <p>Il n'y a pas d'évenements pour le moment</p>
