--- a/events/templates/persons/home.html
+++ b/events/templates/persons/home.html
@@ -1,7 +1,54 @@
 {% extends 'persons/base_navbar.html' %}
 {% load bootstrap4 %}
-
+{% load static %}
 {% block content %}
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <!-- CUSTOM BLOCKQUOTE -->
+                    <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
+                        <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">POUR QUI
+                            ?</h2></div>
+                        <p class="mb-0 mt-3 font-italic"> Ce site est accessible pour les professionnels de l'évènement
+                            comme pour les particuliers
+                            qui
+                            souhaitent
+                            promouvoir des évènements ou simplement les utilisateurs qui souhaite participer.</p>
+                    </blockquote><!-- END --> <!-- CUSTOM BLOCKQUOTE -->
+                </div>
+                <div class="col-lg-6">
+                    <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
+                        <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">QUI
+                            SOMMES-NOUS ?</h2></div>
+                        <p class="mb-0 mt-3 font-italic"> Un groupe d'étudiant qui souhaite divertir les gens. Enfaite
+                            on aime faire des activités
+                            sympas
+                            et découvrir
+                            de nouvelles choses. On a donc souhaité faire rencontrer les gens avec des activités,
+                            aider les
+                            gens à
+                            sortir autrement.</p>
+                    </blockquote><!-- END --> <!-- CUSTOM BLOCKQUOTE -->
+                </div>
+                <div class="col-lg-6 m-auto">
+                    <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
+                        <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">VOUS
+                            SOUHAITEZ ?</h2>
+                        </div>
+                        <p class="mb-0 mt-3 font-italic"> Faire quelque chose de nouveau ou apprendre?
+                            Vous ne savez pas quoi faire avec votre enfant, vote soeur ou bien vos copines pour
+                            sortir ? Trouver
+                            des
+                            évènements, de tous genre, autour de vous, avec des utilisateurs notés grâce à leurs
+                            évènements
+                            précédents.</p>
+                    </blockquote><!-- END -->
+                </div>
+
+            </div>
+        </div>
+    </section>
     <div>
         <div>
             <h2>POUR QUI ?</h2>
