--- a/events/templates/persons/profil/profil_show_events.html
+++ b/events/templates/persons/profil/profil_show_events.html
@@ -7,16 +7,16 @@
 {% block content %}
     <ul class="profil-tab nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'profil-show-user' person.pk %}">Profil</a>
+            <a class="nav-link" href="{% url 'profil-show-user' profil_person.pk %}">Profil</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'profil-show-events' person.pk %}">Events</a>
+            <a class="nav-link" href="{% url 'profil-show-events' profil_person.pk %}">Events</a>
         </li>
     </ul>
     <div class="row">
         <div class="col mt-3">
             <div class="row">
-                <h1 class="col-md-7">Évenements proposés par {{ person.pseudo }}</h1>
+                <h1 class="col-md-7">Évenements proposés par {{ profil_person.pseudo }}</h1>
             </div>
             <div class="row d-flex">
                 {% for event in events %}
@@ -32,7 +32,7 @@
                                             href="{% url 'description-event' event.pk %}"><h4
                                             class="mt-3">{{ event.title|title }}</h4></a></p>
                                 </div>
-                                <p>Par {% if event.person.pk is not person.pk %}
+                                <p>Par {% if event.person.pk is not profil_person.pk %}
                                     <a class="show-user"
                                        href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a> {% else %}
                                     {{ event.person.pseudo }} {% endif %}
