--- a/events/templates/persons/registration/incription.html
+++ b/events/templates/persons/registration/incription.html
@@ -19,6 +19,7 @@
             {% bootstrap_field form.phone_number required_css_class='required'%}
             {% bootstrap_field form.pseudo required_css_class='required'%}
             {% bootstrap_field form.person_type required_css_class='required'%}
+            {% bootstrap_field form.is_visible required_css_class='required'%}
         </div>
         <button type="submit" class="btn btn-primary">Ajouter</button>
     </form>
