Redefine Login, add checkbox in profil and change some css

--- a/events/templates/persons/profil/profil_form.html
+++ b/events/templates/persons/profil/profil_form.html
@@ -48,4 +48,9 @@
             {% bootstrap_field form.country required_css_class='required' %}
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-4">
+            {% bootstrap_field form.is_visible required_css_class='required' %}
+        </div>
+    </div>
 </form>
