--- a/events/templates/persons/profil/profil_form.html
+++ b/events/templates/persons/profil/profil_form.html
@@ -15,6 +15,9 @@
         <div class="col-md-4">
             {% bootstrap_field form.imageProfil required_css_class='required' %}
         </div>
+        <div class="col-md-4">
+            {% bootstrap_field form.pseudo required_css_class='required' %}
+        </div>
     </div>
     <div class="row">
         <div class="col-md-4">
@@ -51,6 +54,10 @@
     <div class="row">
         <div class="col-md-4">
             {% bootstrap_field form.is_visible required_css_class='required' %}
+        </div>
+        <div class="col-md-4">
+            <p>Veuillez entrer votre mot de passe pour modifiere votre profil</p>
+            {% bootstrap_field form.password required_css_class='required' %}
         </div>
     </div>
 </form>
